@@ -22,7 +22,7 @@ Print out help and exit.
  
 .SH SEE ALSO
 .IX Header "SEE ALSO"
-.BR "obdlogger(1), obd2kml(1)"
+.BR "obdlogger(1), obd2kml(1), obdgui(1)"
 
 .SH AUTHORS
 Gary "Chunky Ks" Briggs <chunky@icculus.org>
