@@ -1,0 +1,24 @@
+.TH obdgui 1
+.SH NAME
+obdgui \- Interative UI for obdgpslogger
+
+.SH SYNOPSIS
+.B obdgui
+
+.SH DESCRIPTION
+.IX Header "DESCRIPTION"
+This is an interative UI for obdgpslogger, to aid in starting and trip
+handling, as well as giving live status on the things that are being
+logged.
+
+.SH BUGS
+.IX Header "BUGS"
+This is ugly. U-G-L-Y.
+
+.SH SEE ALSO
+.IX Header "SEE ALSO"
+.BR "obd2kml(1), obd2csv(1), obdgpslogger(1)"
+
+.SH AUTHORS
+Gary "Chunky Ks" Briggs <chunky@icculus.org>
+
